--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "algolia/algoliasearch-client-php": "^3.4",
         "laravel/framework": "^11.9",
-        "laravel/tinker": "^2.9"
+        "laravel/scout": "^10.10",
+        "laravel/tinker": "^2.9",
+        "maatwebsite/excel": "^3.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
